add user profile update route
