# docs/swagger.json
@@ -83,20 +83,87 @@
                     }
                 }
             }
+        },
+        "/user/{id}/profile": {
+            "put": {
+                "description": "Обновляет профиль пользователя по переданному ID, если пользователь аутентифицирован и имеет доступ",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "summary": "Обновление профиля пользователя",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "ID пользователя",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Данные для обновления профиля",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/internal_transport_http_user.UpdateUserProfileReq"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Профиль успешно обновлён",
+                        "schema": {
+                            "$ref": "#/definitions/billsplitter-monolith_internal_utils_http.ResponseOK"
+                        }
+                    },
+                    "400": {
+                        "description": "Некорректный запрос или ошибка сессии",
+                        "schema": {
+                            "$ref": "#/definitions/billsplitter-monolith_internal_utils_http.ErrorResponse"
+                        }
+                    },
+                    "403": {
+                        "description": "Доступ запрещён (несовпадение ID пользователя и сессии)",
+                        "schema": {
+                            "$ref": "#/definitions/billsplitter-monolith_internal_utils_http.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Внутренняя ошибка сервера (в debug режиме — детали)",
+                        "schema": {
+                            "$ref": "#/definitions/billsplitter-monolith_internal_utils_http.ErrorResponse"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
-        "billsplitter-monolith_internal_domain_auth.User": {
+        "billsplitter-monolith_internal_domain_user.ExtraInfo": {
+            "type": "object",
+            "properties": {
+                "telegram_id": {
+                    "type": "integer"
+                }
+            }
+        },
+        "billsplitter-monolith_internal_domain_user.User": {
             "type": "object",
             "properties": {
                 "extra": {
-                    "$ref": "#/definitions/billsplitter-monolith_internal_domain_auth.UserExtra"
+                    "$ref": "#/definitions/billsplitter-monolith_internal_domain_user.ExtraInfo"
                 },
                 "firstName": {
                     "type": "string"
                 },
                 "id": {
-                    "type": "string"
+                    "type": "integer"
                 },
                 "lastName": {
                     "type": "string"
@@ -106,18 +173,18 @@
                 }
             }
         },
-        "billsplitter-monolith_internal_domain_auth.UserExtra": {
-            "type": "object",
-            "properties": {
-                "telegram_id": {
-                    "type": "integer"
-                }
-            }
-        },
         "billsplitter-monolith_internal_utils_http.ErrorResponse": {
             "type": "object",
             "properties": {
                 "errorMessage": {
+                    "type": "string"
+                }
+            }
+        },
+        "billsplitter-monolith_internal_utils_http.ResponseOK": {
+            "type": "object",
+            "properties": {
+                "message": {
                     "type": "string"
                 }
             }
@@ -154,7 +221,7 @@
                     "example": "b42b0a8e-0d1f-4c3d-939f-85fbbdc9be62"
                 },
                 "userInfo": {
-                    "$ref": "#/definitions/billsplitter-monolith_internal_domain_auth.User"
+                    "$ref": "#/definitions/billsplitter-monolith_internal_domain_user.User"
                 }
             }
         },
@@ -162,7 +229,24 @@
             "type": "object",
             "properties": {
                 "user": {
-                    "$ref": "#/definitions/billsplitter-monolith_internal_domain_auth.User"
+                    "$ref": "#/definitions/billsplitter-monolith_internal_domain_user.User"
+                }
+            }
+        },
+        "internal_transport_http_user.UpdateUserProfileReq": {
+            "type": "object",
+            "properties": {
+                "firstName": {
+                    "type": "string",
+                    "example": "John"
+                },
+                "lastName": {
+                    "type": "string",
+                    "example": "Doe"
+                },
+                "username": {
+                    "type": "string",
+                    "example": "johndoe"
                 }
             }
         }
